Kubernetes/drkiq/drkiq-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: rubyapp
  name: drkiq-deployment
  labels:
    app: drkiq
    version: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drkiq
      version: "1"
  template:
    metadata:
      labels:
        app: drkiq
        version: "1"
    spec:
      containers:  
      - name: drkiq
        command: 
          ["/bin/bash","-c"]
        args:
          - rake db:reset;
            rake db:migrate;
            bundle exec unicorn -c config/unicorn.rb;
        resources:
          requests:
            cpu: "500m"
            memory: "128Mi" 
          limits:
            cpu: "500m"
            memory: "256Mi"
        image: anas149037/dockerizing-ruby-drkiq
        ports:
          - containerPort: 8010
