Kubernetes/drkiq/drkiq-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: drkiq
    version: "1"
  name: drkiq
  namespace: rubyapp
spec:
  ports:
  - nodePort: 30106
    port: 8010
    protocol: TCP
    targetPort: 8010
  selector:
    app: drkiq
    version: "1"
  type: NodePort
status:
  loadBalancer: {}
