Kubernetes/drkiq/sidekiq-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: sidekiq
  namespace: rubyapp
spec:
  clusterIP: None 
  selector:
    app: sidekiq
  ports:
    - protocol: TCP
      port: 50000
      targetPort: 0
