Kubernetes/drkiq/drkiq-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drkiq-ingress
  namespace: rubyapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: drkiq
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8010
